attempt to fix bug on IPhone8Plus chrome browser where site not taking up full screen width

--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,7 @@ main {
     display: flex;
     flex-direction: row;
     height: 100vh;
+    width: 100vw;
     /* grid-template-columns: 80fr 20fr;
     grid-template-rows: 100fr; */
     /* justify-content: stretch; */
